# RustZeroDeepLearning

./: .gitignore  Cargo.toml  README.md
dots/: test_get_dot_graph_1.dot  test_get_dot_graph_goldstein.dot  test_get_dot_graph_matyas.dot  test_get_dot_graph_sphere.dot  test_step35_tanh_1.png.dot  test_step35_tanh_3.png.dot  test_step35_tanh_7.png.dot  test_step45_two_layer_net.png.dot
src/: functions.rs  lib.rs  main.rs  modules.rs  settings.rs  step20.rs  tests.rs  variable.rs
src/modules/: BigIntWrapper.rs  add.rs  big_int_wrapper.rs  core.rs  datasets.rs  exp.rs  function_libs.rs  functions.rs  layer_modules.rs  math.rs  mul.rs  optimizers.rs  settings.rs  square.rs  utils.rs  variable.rs
src/modules/core/: data_loader.rs  function_libs.rs  functions.rs  layer.rs  parameter.rs  raw_data.rs  variable.rs
src/modules/layer_modules/: linear.rs  mlp.rs  sgd.rs  softmax.rs  two_layer_net.rs
src/modules/math/: add.rs  broadcast_to.rs  cos.rs  div.rs  exp.rs  factorial.rs  get_item.rs  get_item_grad.rs  linear.rs  logarithm.rs  matmul.rs  mean_squared_error.rs  mul.rs  neg.rs  pow.rs  reshape.rs  sigmoid.rs  sin.rs  softmax.rs  softmax_cross_entropy.rs  square.rs  sub.rs  sum.rs  sum_to.rs  tanh.rs  transpose.rs
src/modules/optimizers/: ada_grad.rs  momentum_sgd.rs  optimizer.rs  sgd.rs
tests/: integration-tests.rs  mnist.rs  stage1-stage2.rs  stage3.rs  stage4.rs
tests/common/: mod.rs
