[package]
name = "rust_zero_deeplearning"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.16.*", features = ["approx"] }
approx = {version = "0.5.*"}
num-complex = { version = "0.4.*" }
rand = {version = "0.9.*"}
num-traits = {version = "0.2.*"}
num-bigint = {version = "0.4.*"}

[profile.dev]
opt-level = 0
