[package]
name = "rust_zero_deeplearning"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.16.*", features = ["approx"] }
approx = {version = "0.5.*"}
num-complex = { version = "0.4.*" }
rand = {version = "0.8.*"}
num-traits = {version = "0.2.*"}
num-bigint = {version = "0.4.*"}
log = {version = "0.4.*"}
env_logger = {version = "0.11.*"}
plotters = {version = "0.3.*"}
ndarray-rand = {version = "0.15.*"}
rand_isaac = { version = "0.3.*"}
reqwest = {version = "0.12.*", features = ["blocking"]}
flate2 = {version = "1.1.*"}

[dev-dependencies]


[profile.dev]
opt-level = 0

[profile.test-with-debug]
inherits = "dev"
opt-level = 0
debug = true
